[gd_scene load_steps=5 format=3 uid="uid://dysw0v0macqh6"]

[ext_resource type="Texture2D" uid="uid://eij2hohstuhh" path="res://images/background.png" id="1_hnsup"]
[ext_resource type="Script" uid="uid://xfebceag673a" path="res://scenes/highscore_menu/highscore_menu.gd" id="1_wdu0c"]
[ext_resource type="Texture2D" uid="uid://bkwgcv2brn8mh" path="res://images/icons/icon.svg" id="3_voc57"]

[sub_resource type="LabelSettings" id="LabelSettings_mrghh"]
font_size = 64

[node name="HighscoreMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wdu0c")

[node name="BackgroundSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_hnsup")
centered = false

[node name="Title" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Title"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "HIGHSCORE_MENU"
label_settings = SubResource("LabelSettings_mrghh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Title"]
layout_mode = 2

[node name="LogoSprite" type="Sprite2D" parent="Title/Control"]
position = Vector2(25, 10)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_voc57")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="CloseButton" type="Button" parent="CenterContainer"]
layout_mode = 2
text = "BACK"

[node name="HighscoreTabContainer" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
current_tab = 0

[node name="Age0" type="ScrollContainer" parent="HighscoreTabContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
metadata/_tab_index = 0

[node name="HighscoreLabel" type="Label" parent="HighscoreTabContainer/Age0"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
text = "LOADING_HIGHSCORE"
autowrap_mode = 2

[node name="Age1" type="ScrollContainer" parent="HighscoreTabContainer"]
visible = false
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
metadata/_tab_index = 1

[node name="HighscoreLabel" type="Label" parent="HighscoreTabContainer/Age1"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
text = "LOADING_HIGHSCORE"
autowrap_mode = 2

[node name="Age2" type="ScrollContainer" parent="HighscoreTabContainer"]
visible = false
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
metadata/_tab_index = 2

[node name="HighscoreLabel" type="Label" parent="HighscoreTabContainer/Age2"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
text = "LOADING_HIGHSCORE"
autowrap_mode = 2

[connection signal="pressed" from="CenterContainer/CloseButton" to="." method="_on_close_button_pressed"]
